@@ -1,3 +1,9 @@
+2003-09-05  David Malcolm <david@davemalcolm.demon.co.uk>
+
+	* cong-app.c, cong-app.h, main.c
+
+	My attempt at fix for bug #119755
+
 2003-09-04  David Malcolm <david@davemalcolm.demon.co.uk>
 
 	* plugin-docbook.c
